Mon Dec 17 21:02:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Fixed DataReader::delete_contained_entities().

        * tests/DCPS/ReadCondition/ReadConditionTest.cpp:

          Tested the above.

        * dds/DdsDcpsInfrastructure.idl:

          Fixed inconsistent QoS policy names that are also wrong in the DDS
          spec.  The correct names are obvious, so we'll deviate from the spec.

Fri Dec 14 23:23:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Revised locking strategy for dealing with scheduling
          ACE timers: need to schedule the timer after releasing
          the datalink's mutex to avoid calling into the reactor
          with the mutex held.

Thu Dec 13 19:32:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Fixed some Coverity warnings.

Wed Dec 12 22:16:36 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Fixed leak of type name string when removing multitopic.

Wed Dec 12 21:55:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/MultiTopicDataReaderBase.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:

          Corrected cleanup of data readers created
          internally by the multi topic data reader.

        * tests/DCPS/MultiTopic/MultiTopicTest.cpp:

          Test with separate domain participants for the
          publishing and subscribing parts of the application.
